objects/Segment__c.object
<CustomObject>
    <description>For segment status in YL</description>
    <fields>
        <fullName>Definition__c</fullName>
        <label>Definition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Local_Status_Change__c</fullName>
        <label>Last Local Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_National_Status_Change__c</fullName>
        <label>Last National Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Local_Segment_Color__c</fullName>
        <formula>if(
  ISPICKVAL(Local_Segment_Status__c,"red"),
IMAGE("servlet/servlet.FileDownload?file=015600000009Hme","red"),
if(
  ISPICKVAL(Local_Segment_Status__c,"yellow"),
IMAGE("servlet/servlet.FileDownload?file=015600000009Hmj","yellow"),
IMAGE("servlet/servlet.FileDownload?file=015600000009Hmo","green")
)
)</formula>
        <label>Local Segment Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Segment_Status__c</fullName>
        <label>Local Segment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Segment_Color__c</fullName>
        <formula>if(
ISPICKVAL(National_Segment_Status__c,"red"),
IMAGE("servlet/servlet.FileDownload?file=015600000009Hme","red"),
if(
ISPICKVAL(National_Segment_Status__c,"yellow"),
IMAGE("servlet/servlet.FileDownload?file=015600000009Hmj","yellow"),
IMAGE("servlet/servlet.FileDownload?file=015600000009Hmo","green")
)
)</formula>
        <label>National Segment Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Segment_Status__c</fullName>
        <label>National Segment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Yellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Yellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Local_Status__c</fullName>
        <label>Prior Local Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_National_Status__c</fullName>
        <label>Prior National Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>National_Segment_Color__c</columns>
        <columns>Definition__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_National_Green_Segments</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>National_Segment_Color__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>National_Segment_Status__c</field>
            <operation>equals</operation>
            <value>GREEN</value>
        </filters>
        <label>All National Green Segments</label>
        <sharedTo>
            <role>Director_National_Sales</role>
            <role>NationalAccountsManagerHeppner</role>
            <role>NationalAccountsSales</role>
            <role>NationalClientPartnerSales</role>
            <role>VPNationalAccountsSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_National_Red_Segments</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>National_Segment_Status__c</field>
            <operation>equals</operation>
            <value>RED</value>
        </filters>
        <label>All National Red Segments</label>
        <sharedTo>
            <role>Director_National_Sales</role>
            <role>NationalAccountsManagerHeppner</role>
            <role>NationalAccountsSales</role>
            <role>NationalClientPartnerSales</role>
            <role>VPNationalAccountsSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_National_Yellow_Segments</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>National_Segment_Status__c</field>
            <operation>equals</operation>
            <value>YELLOW</value>
        </filters>
        <label>All National Yellow Segments</label>
        <sharedTo>
            <role>Director_National_Sales</role>
            <role>NationalAccountsManagerHeppner</role>
            <role>NationalAccountsSales</role>
            <role>NationalClientPartnerSales</role>
            <role>VPNationalAccountsSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rogers_Support_Segment</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Send_To_Rogers_Segment</fullName>
        <filterScope>Queue</filterScope>
        <label>Send To Rogers</label>
        <queue>Send_To_Rogers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>